# simulation-pipeline

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  colors.h  constants.h  debug.h  draw.h  drone.h  file.h  functions.cpp  functions.h  group_10_avoider.c  group_10_avoider.h  group_10_obstacle_detector.c  group_10_obstacle_detector.h  image_processing.h  main.cpp  navigation.h  obstacle.h  opencv_image_functions.cpp  opencv_image_functions.h  opencv_wrapper.cpp  opencv_wrapper.h  path_planning.h  rms.h  shape.h  simulation.h  transform.h  types.h  utility.h
